fix: phones: content spacing around top toolbars + styles

--- a/styles.css
+++ b/styles.css
@@ -1405,10 +1405,13 @@ body {
         --ntb-tbar-top-header-pt-phone: var(--view-header-top-offset);
         --ntb-tbar-top-spacing-md: calc(var(--view-header-height) + 16px);
         --ntb-tbar-top-spacing: calc(var(--view-header-height) + 16px);
+        &:not(.is-floating-nav) {
+            --ntb-tbar-top-spacing-md: var(--size-4-2);
+        }
     }
     &.is-floating-nav {
         --ntb-tbar-bottom-mb-phone: calc(var(--cg-nt-tbar-bottom-mb-phone) + var(--navbar-height) + var(--safe-area-inset-bottom));
-        --ntb-tbar-top-spacing-md: calc(var(--view-header-height) + 16px);
+        --ntb-tbar-top-spacing-md: var(--size-4-2);
         --ntb-tbar-top-spacing: calc(var(--view-header-height) + 16px);
         &:not(.auto-full-screen) {
             --ntb-tbar-top-header-mt-phone: var(--ntb-toolbar-height);
@@ -1418,6 +1421,7 @@ body {
     }
     &.is-hidden-nav {
         --ntb-tbar-bottom-mb-phone: calc(var(--cg-nt-tbar-bottom-mb-phone) + var(--safe-area-inset-bottom));
+        --ntb-tbar-top-spacing: var(--size-4-2);
     }
     &.ntb-remove-nav {
         --ntb-tbar-bottom-mb-phone: calc(var(--cg-nt-tbar-bottom-mb-phone) + var(--safe-area-inset-bottom));
